
2.3b2
- Much improved queue management (fewer connections)
- Menu item 'Download As...'
- Editing multiple files in the external editor with the same name
- Resume downloads (SFTP)
- Resume uploads (SFTP)
- Resume uploads (FTP)
- Drag files onto bookmark to quickly upload
- Bookmarks are shown in the menu
- Toolbar button to remove all completed items from the queue
- 'Apply to all' checkbox in dialog asking for replace/resume/skip existing files
- Warning if a duplicate exists is also shown when uploading files
- Improved caching of directory listings
- When dropping files onto folders it will upload these into the folder
- Bug fixes

2.3b1
- External editor support (SubEthaEdit, BBEdit, TextWrangler, Text-Edit Plus)

2.2
- Supporting folders with sticky/set-uid/set-gid bits (FTP)
- Updated Dutch localization
- Updated French localization
- Minor performance improvements

2.2b6
- Preliminary support for Windows, VMS and OS/2 file listings (FTP)
- Properly deleting symbolic links (FTP)
- Displaying link icons in browser
- Downloading files from FTP servers not supporting the SIZE command (FTP)
- Fixed a bug where overwritten files with SFTP got corrupted (Thanks to Jan!)
- Contextual Menu support
- Bug fixes

2.2b5
- Chinese (Traditional) Localization
- Korean Localization
- Passphrases for private key files are stored in the Keychain (SSH)
- Bookmark editor allows to specify the port number
- When a bookmark is edited, the properties are updated in the bookmark drawer instantly
- A confirmation dialog is displayed before deleting a bookmark
- A confirmation dialog is displayed when connecting to a new site in a browser still connected to another host
- Transcript messages are only shown in the corresponding browser
- Fixed a bug which caused the browser window to be 'frozen' after an upload
- Option to adjust the 'LIST' command sent (FTP)
- Fixed a bug which caused a crash when not connected to a network
- Updated application icon

2.2b4