@@ -13,11 +13,12 @@ Cyberduck is an open source SFTP (SSH Secure File Transfer) and FTP browser lice
 - Resume uploads (FTP)
 - Drag files onto bookmark to quickly upload
 - Bookmarks are shown in the menu
-- Toolbar button to remove all completed items from the queue
 - 'Apply to all' checkbox in dialog asking for replace/resume/skip existing files
 - Warning if a duplicate exists is also shown when uploading files
 - Improved caching of directory listings
 - When dropping files onto folders it will upload these into the folder
+- When typing the first leter of a file it gets selected in the browser
+- Toolbar button to remove all completed items from the queue
 - Bug fixes
 
 2.3b1
